app/app.css
.main-page {
  display: flex;
  flex-direction: column;
  align-items: center;
  height: 2000px;
  width: 100%;
  background-image: linear-gradient(rgb(5, 39, 30), rgb(50, 50, 50));
  background-repeat: no-repeat;
  background-size: cover;
  background-position: 50% 50%;
  background-clip: content-box;
}

.page-title-wrapper {
  background-image: linear-gradient(
    to right,
    rgb(150, 150, 150),
    rgb(221, 221, 221)
  );
  height: 85px;
  width: 100%;
  border-radius: 20px;
  display: flex;
  justify-content: space-between;
  color: black;
  align-items: center;
  box-shadow: 0px 10px 15px white;
  padding-left: 10%;
  padding-right: 10%;

  .title-section {
    display: flex;
    gap: 20px;
    align-items: center;
  }

  .logo-container {
    width: 70px;
    height: 70px;
    border-radius: 100%;
    border-width: 3px;
    border-color: white;
  }

  .page-title {
    font-size: 30px;
    font-weight: bold;
    font-family: sans-serif;
    color: aliceblue;
  }
  .other-links-wrapper {
    display: flex;
    justify-content: space-between;
    width: 40%;
    font-size: 20px;
  }
}

.quote-container {
  background-image: linear-gradient(
    rgba(251, 251, 251, 0.4),
    rgba(104, 104, 104, 0.4)
  );
  max-width: 500px;
  width: 100%;
  font-style: italic;
  margin-top: 200px;
  color: rgb(255, 255, 255);
  font-size: 30px;
  padding: 20px;
  border-radius: 20px;

  .quote-text {
    font-weight: bold;
  }
}

